clean up lint deprecation warnings